--- a/config.yaml
+++ b/config.yaml
@@ -5,13 +5,25 @@ data_path :    "data"
 images_folder: "images_B"        
 
 # File containing the lesion labels
-lesion_file:   "labels_B.csv"    
+lesion_file:   "labels_B.csv"
 
 # File containing the shortcuts binary label
 shortcut_file: "shortcuts_B.csv" 
 
 # New image size
-size: [120, 90]
+size: [600, 450]
+
+# Train_size
+lesion_train: 7000
+
+# Validation size
+lesion_val: 1500
+
+# Test size
+lesion_test: 1515
 
 # Batch size
 batch_size: 3
+
+# Seed
+seed: 1
